--- a/template-project/package.json
+++ b/template-project/package.json
@@ -23,6 +23,7 @@
     "https-browserify": "^1.0.0",
     "notistack": "^2.0.8",
     "os-browserify": "^0.3.0",
+    "re-ether": "^0.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -58,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
