--- a/updater/template-project/package.json
+++ b/updater/template-project/package.json
@@ -40,7 +40,8 @@
     "start": "npm run debug",
     "debug": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
